# MCP_PLATFORM_FastMCP

./: .env.template  .gitignore  .pre-commit-config.yaml  CONFIGURATION_GUIDE.md  HTTP_IMPROVEMENTS.md  IDEMPOTENCY.md  MCP_SDK_IMPROVEMENTS.md  OPENAI_RESPONSES_README.md  README.md  README_NEW.md  RESOURCE_HANDLING_IMPROVEMENTS.md  SCHEMA_IMPROVEMENTS.md  STREAMING_GUIDE.md  THINKING_BLOCKS_README.md  TOKEN_FIX_SUMMARY.md  USAGE_FIX_SUMMARY.md  events.jsonl  implementation.md  note.md  optimizations.md  pyproject.toml  run.sh  server-info.json  setup.sh  test_clear_session.py  test_demo.py  test_direct.py  test_http_config.py  test_http_resilience.py  test_prompts.py  test_usage_tracking.py
.github/: copilot-instructions.md
Client/: .gitignore  pyproject.toml
Client/.github/: copilot-instructions.md
Client/src/: chat_service.py  config.py  config.yaml  main.py  prompt_manager.py  servers_config.json  tool_schema_manager.py
Servers/: demo_prompt_server.py  demo_resources_server.py  demo_server.py  prompt_options.template.md
Servers/simple-tool/: pyproject.toml
Servers/simple-tool/mcp_simple_tool/: server.py
src/: __init__.py  anthropic_orchestrator.py  chat_service.py  config.py  config.yaml  http_resilience.py  main.py  main_new.py  openai_orchestrator.py  schema_manager.py  servers_config.json  tool_schema_manager.py  websocket_server.py
src/conversation/: persistence.py
src/history/: chat_store.py  conversation_utils.py  persistence.py  token_counter.py
src/llm/: base.py  client.py
src/llm/providers/: __init__.py  anthropic.py  azure_openai.py  openai_compat.py
src/llm_orchestrators/: __init__.py  anthropic_orchestrator.py  gemini_orchestrator.py  http_resilience.py  openai_orchestrator.py  openai_responses_orchestrator.py
src/mcp_services/: __init__.py  prompting.py
tests/: test_mcp_prompting.py  test_persistence.py
