[project]
name = "mcp-platform"
version = "0.1.0"
description = "MCP Platform"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "mcp>=1.11.0",
    "openai>=1.95.1",
    "PyYAML>=6.0.2",
    "websockets>=15.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "httpx>=0.27",
    "anyio>=4.5",
    "click>=8.1.0",
    "mcp-platform-client",
    "mcp-simple-tool",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.10.0",
    "mypy>=1.16.1",
    "pyright>=1.1.378",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.uv.sources]
mcp-platform-client = { path = "Client", editable = true }
mcp-simple-tool = { path = "Servers/simple-tool", editable = true }

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]
