[project]
name = "mcp-platform"
version = "0.1.0"
description = "Modern MCP Platform with comprehensive protocol support"
authors = [
    {name = "Jack", email = "jack@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "mcp>=1.12.0",
    "openai>=1.95.1",
    "PyYAML>=6.0.2",
    "websockets>=15.0.1",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
    "anyio>=4.9.0",
    "click>=8.2.0",
    "fastmcp>=2.10.6",
]

[project.scripts]
mcp-platform = "src.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
    "mypy>=1.17.0",
    "pyright>=1.1.403",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E203", # whitespace before ':' (conflicts with black)
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# No additional UV sources needed

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
