[project]
name = "mcp-platform-client"
version = "0.1.0"
description = "MCP Platform Client for managing Model Context Protocol servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "mcp>=1.11.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.2",
    "websockets>=15.0.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.10.0",
    "mypy>=1.16.1",
]

[project.scripts]
mcp-client = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
